fixed image alignment

--- a/style.css
+++ b/style.css
@@ -173,21 +173,16 @@ border-top: 1px solid white;
   border-left: 4px solid #1A1A1A;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
   position: relative;
-  right: 0;
-  top: 0;
-  bottom: 0;
   overflow-y: auto;
 }
 
 .details img {
-  width: 150px;
-  align-items: center;
-  align-self: center;
+  width: 175px;
   height: auto;
-  border-radius: 50%;
-  margin-bottom: 20px;
+  margin: 0 auto 20px auto; /* Center the image horizontally */
   display: block;
 }
+
 
 
 /* book */
